--- a/style.css
+++ b/style.css
@@ -55,6 +55,8 @@ button:hover{
 #bmi-value{
     font-size: 1.2em;
     font-weight: bold;
+    margin-top: 20px;
+    text-align: center;
 }
 #interpretation{
     font-size: 1.1em;
