--- a/style.css
+++ b/style.css
@@ -86,6 +86,11 @@ button:active{
     color: #34495e;
     margin-top: 10px;
 }
+#text{
+    font-size: 1em;
+    color: #ff0000;
+    margin-top: 10px;
+}
 @media(max-width:480px){
     h1{
         font-size: 1.2em;
